force-app/main/default/objects/Interfaces__c/Interfaces__c.object-meta.xml
<CustomObject>
    <label>Interface</label>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>