force-app/main/default/objects/Interfaces__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>