force-app/main/default/objects/Interfaces__c/fields/ParentInterface__c.field-meta.xml
<CustomField>
    <fullName>ParentInterface__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentInterface</label>
    <referenceTo>Interfaces__c</referenceTo>
    <relationshipLabel>Interfaces</relationshipLabel>
    <relationshipName>Interfaces</relationshipName>
    <type>Lookup</type>
</CustomField>